Añade archvos de pantallas

--- a/Kivy_Files/InitialScreen.kv
+++ b/Kivy_Files/InitialScreen.kv
@@ -13,7 +13,7 @@
             orientation: "horizontal"
             Button:
                 text: "Modelo M/M/1"
-                ##on_press: root.centros()
+                on_press: root.mm1()
 
         BoxLayout:
             orientation: "horizontal"
