--- a/Kivy_Files/InitialScreen.kv
+++ b/Kivy_Files/InitialScreen.kv
@@ -13,13 +13,13 @@
             orientation: "horizontal"
             Button:
                 text: "Modelo M/M/1"
-                on_press: root.mm1()
+                on_press: root.go_to_screen("mm1_screen")
 
         BoxLayout:
             orientation: "horizontal"
             Button:
                 text: "Modelo M/M/S"
-                ##on_press: root.congruencial_lineal()
+                on_press: root.go_to_screen("mms_screen")
 
         BoxLayout:
             orientation: "horizontal"
