--- a/Kivy_Files/InitialScreen.kv
+++ b/Kivy_Files/InitialScreen.kv
@@ -25,13 +25,13 @@
             orientation: "horizontal"
             Button:
                 text: "Modelo M/M/s/K"
-                ##on_press: root.congruencial_mixto()
+                on_press: root.go_to_screen("mmsk_screen")
 
         BoxLayout:
             orientation: "horizontal"
             Button:
                 text: "Modelo M/G/1"
-                ##on_press: root.congruencial_multiplicativo()
+                on_press: root.go_to_screen("mg1_screen")
 
 
         BoxLayout:
